[package]
name = "bunlock"
version = "0.1.0"
authors = ["Ilia MatthewAllDev Kuvarzin <luceo2011@yandex.ru>"]
license = "GPL-3.0"
description = "A tool for unlocking your system using a Bluetooth device"
repository = "https://github.com/MatthewAllDev/bunlock"
homepage = "https://github.com/MatthewAllDev/bunlock"
readme = "README.md"
keywords = ["bluetooth", "unlock", "security"]
categories = ["security"]
edition = "2021"

[dependencies]
clap = "4.5"
dbus = "0.9"
home = "^0.5"
dialoguer = { version = "0.11" }
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

